[project]

name = "wtftw_contrib"
version = "0.0.2"
authors = ["Simon Wollwage"]

[dependencies.wtftw]
git = "https://github.com/pierrechevalier83/wtftw.git"

[dependencies]
bitflags = "*"
rustc-serialize = "*"
log = "*"
num = "*"
libc = "*"
dylib = "*"

[lib]
name = "wtftw_contrib"
path = "src/lib.rs"
crate-type = ["rlib"]
